AWS_CloudFormation/VPC_Route53.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  LatestAmiId:
    Description: (DO NOT CHANGE)
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
    AllowedValues:
      - /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64 

Resources:
  MyVPC:     #가상 네트워크 공간 생성
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: My-VPC
          
  MyIGW:     #VPC를 인터넷과 연결하는 출입문
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: My-IGW
          
  MyIGWAttachment:     #IGW를 VPC에 실제로 연결
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MyIGW
      VpcId: !Ref MyVPC
  
  MyPublicSN1:     #Public 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SN1
          
  MyPublicSN2:     #Public2 서브넷 생성
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]     #현재 리전의 첫 번째 AZ 목록 반환 (가용 영역 A)
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: TEST-Public-SN2

  MyPublicRT:     #퍼블릭용 라우팅 테이블 생성
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: My-Public-RT
          
  DefaultPublicRoute:     #퍼블릭 RT에 기본 인터넷 경로 추가
    Type: AWS::EC2::Route
    DependsOn: MyIGWAttachment     #TESTIGWAttachment가 먼저 생성된 후 만들어지도록 순서 지정해주는 부분
    Properties:
      RouteTableId: !Ref MyPublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyIGW
  
  MyPublicSNRouteTableAssociation1:     #Public 서브넷1을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyPublicRT
      SubnetId: !Ref MyPublicSN1
      
  MyPublicSNRouteTableAssociation2:     #Public 서브넷2을 Public 라우팅 테이블에 연결
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyPublicRT
      SubnetId: !Ref MyPublicSN2
      
  WEBSG:     #보안그룹 하나 생성
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH access via port 22
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp     #icmp는 포트가 없으므로 지정 안함
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  EC21:     #Public EC2 인스턴스 생성
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: EC2-1
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref MyPublicSN1
          GroupSet:
            - !Ref WEBSG
          #AssociatePublicIpAddress: true     #공인IP할당
          
  # EIP 생성
  EC21EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # EIP를 EC2에 연결
  EC21EIPAssociation:
    Type: AWS::EC2::EIPAssociation
    DependsOn: EC21
    Properties:
      InstanceId: !Ref EC21
      AllocationId: !GetAtt EC21EIP.AllocationId
          
  EC22:     #Public EC2 인스턴스 생성
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: EC2-2
      NetworkInterfaces:     #ENI를 정의하는 구조
        - DeviceIndex: 0
          SubnetId: !Ref MyPublicSN2
          GroupSet:
            - !Ref WEBSG
          #AssociatePublicIpAddress: true     #공인IP할당
          
  # EIP 생성
  EC22EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # EIP를 EC22에 연결
  EC22EIPAssociation:
    Type: AWS::EC2::EIPAssociation
    DependsOn: EC22
    Properties:
      InstanceId: !Ref EC22
      AllocationId: !GetAtt EC22EIP.AllocationId  
      
  # ALB 생성
  MyALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      Name: My-ALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref WEBSG
      Subnets:
        - !Ref MyPublicSN1
        - !Ref MyPublicSN2
        
  # ALB 대상 그룹
  ALBTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: ALB-TG
      Port: 80
      Protocol: HTTP
      HealthCheckIntervalSeconds: 10
      VpcId: !Ref MyVPC
      Targets:    # 오토 스케일링 그룹에서 자동 등록해줄거니깐 target 부분은 주석 처리 
        - Id: !Ref EC21
          Port: 80
        - Id: !Ref EC22
          Port: 80
          
  # ALB 리스너 생성
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTG
      LoadBalancerArn: !Ref MyALB
      Port: 80
      Protocol: HTTP
      
  PublicDNS:     #Route53 서비스 생성
    Type: AWS::Route53::HostedZone
    Properties:
      Name: siseon.live
      HostedZoneConfig:
        Comment: Public hosted zone For siseon.live
        
  ALBAlias:     # 로드밸런서엔드포인트를 원하는 서브도메인 생성해서 연결하는것  
    Type: AWS::Route53::RecordSet
    Properties:
      Name: alb.siseon.live
      Type: A
      HostedZoneId: !Ref PublicDNS
      AliasTarget:
        DNSName: !GetAtt MyALB.DNSName     #로드밸런서의 DNS이름 연결 
        HostedZoneId: !GetAtt MyALB.CanonicalHostedZoneID
        
  PrimaryHealthCheck1:
    Type: AWS::Route53::HealthCheck
    Properties:
      HealthCheckConfig:
        IPAddress: !GetAtt EC21.PublicIp
        Port: 80
        Type: HTTP
        ResourcePath: /index.html
      HealthCheckTags:
        - Key: Name
          Value: Primary-Check
          
  PrimaryHealthCheck2:
    Type: AWS::Route53::HealthCheck
    Properties:
      HealthCheckConfig:
        IPAddress: !GetAtt EC22.PublicIp
        Port: 80
        Type: HTTP
        ResourcePath: /index.html
      HealthCheckTags:
        - Key: Name
          Value: Secondary-Check
          
  PrimaryRecordSet:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: test.siseon.live
      Type: A
      TTL: 30
      HostedZoneId: !Ref PublicDNS
      ResourceRecords:
        - !GetAtt EC21.PublicIp
      Failover: PRIMARY
      SetIdentifier: 1
      HealthCheckId: !Ref PrimaryHealthCheck1
      
  SecondaryRecordSet:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: test.siseon.live
      Type: A
      TTL: 30
      HostedZoneId: !Ref PublicDNS
      ResourceRecords:
        - !GetAtt EC22.PublicIp
      Failover: SECONDARY
      SetIdentifier: 2
      HealthCheckId: !Ref PrimaryHealthCheck2
  
Outputs:     #각 EC2 Public&Private IP 추출
  PublicEC21:
    Description: 퍼블릭 EC2 1 공인 IP
    Value: !GetAtt EC21.PublicIp
  PrivateEC22:
    Description: 퍼블릭 EC2 2 공인 IP
    Value: !GetAtt EC22.PublicIp
